--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividade de revisao 1</title>
+    <title>Atividade de revisao 2</title>
 </head>
 <body>
     <center>
+        <h1>Atividade de revisão</h1>
         <script>
             var numero1 = 14
             var numero2 = 8
-            var soma = numero1 + numero2
-            document.write ("SOMA: " + soma )
+            var subtracao = numero1 - numero2
+            document.write ("SUBITRAÇÃO: " + subtracao )
 
 
         </script>
