--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividade de revisao 2</title>
+    <title>Atividade de revisao 3</title>
 </head>
 <body>
     <center>
-        <h1>Atividade de revisão</h1>
+        <H1>ATIVIDADE DE REVISÃO</H1>
         <script>
             var numero1 = 14
             var numero2 = 8
-            var subtracao = numero1 - numero2
-            document.write ("SUBITRAÇÃO: " + subtracao )
+            var divisao = numero1/numero2
+            document.write ("SOMA: " + divisao )
 
 
         </script>
