--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <script>
             var numero1 = 14
             var numero2 = 8
-            var divisao = numero1/numero2
-            document.write ("SOMA: " + divisao )
+            var multiplicação = numero1/numero2
+            document.write ("Multiplicação: " + multiplicacao )
 
 
         </script>
