--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <script>
             var numero1 = 14
             var numero2 = 8
-            var multiplicação = numero1/numero2
+            var multiplicação = numero1 * numero2
             document.write ("Multiplicação: " + multiplicacao )
 
 
